Fixed the text-align issue
For the mobile responsiveness center align instead of the left align.

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ p{
 }
 
 @media (max-width: 991px){
-  #title{
+  #title .container-fluid{
     text-align: center;
   }
   .title-image{
